<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewOfGirl"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/ui_love_picture"
                android:orientation="horizontal"
                android:src="@drawable/ic_dartmouth" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_name_title" >
            </TextView>

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/ui_profile_name_hint"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:autofillHints="">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_email_title" >
            </TextView>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:enabled="false"
                android:hint="@string/ui_profile_email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_department_title" >
            </TextView>

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_device_title" >
            </TextView>

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textOff = "@string/off"
                android:textOn = "@string/on"
                />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_profile_demand_title" />
      </LinearLayout>
</ScrollView>