<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_party_schedule"
                    android:textSize="@dimen/header_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/party_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:autofillHints=""
                    android:hint="@string/party_title"
                    android:inputType="textShortMessage" />

                <EditText
                    android:id="@+id/venue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:autofillHints=""
                    android:hint="@string/party_venue"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/party_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:autofillHints=""
                    android:hint="@string/party_date"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/party_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:autofillHints=""
                    android:hint="@string/party_time"
                    android:inputType="time" />

                <Button
                    android:id="@+id/save_party_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:src="@drawable/cs"
                    android:text="@string/ui_button_save_title" />
        </LinearLayout>

</androidx.core.widget.NestedScrollView>